--- a/Client/Components/AddTransactionComponent.razor
+++ b/Client/Components/AddTransactionComponent.razor
@@ -697,9 +697,10 @@ else
     public async Task saveRepeatedTransactions(int parentTransID)
     {
         transactionsToAdd.RemoveAll(e => e.transDate <= DateTime.Now);
-        foreach (TransactionToAdd repT in transactionsToAdd)
+        for (int i = transactionsToAdd.Count - 1; i >= 0; i--)
         {
-            if (repT.transValue>0)
+            TransactionToAdd repT = transactionsToAdd[i];
+            if (repT.transValue > 0)
             {
                 repT.parentTransID = parentTransID;
                 repT.tagID = newTransaction.tagID;
@@ -708,9 +709,8 @@ else
             }
             else
             {
-                transactionsToAdd.Remove(repT);
+                transactionsToAdd.RemoveAt(i);
             }
-
         }
 
         foreach (TransactionToAdd repT in transactionsToAdd)
